--- a/.target/views/managers/create.scala.html
+++ b/.target/views/managers/create.scala.html
@@ -1,9 +1,9 @@
-@()(implicit session:play.api.mvc.Session)
+@(id:Long)(implicit session:play.api.mvc.Session)
 @main("create manager") {	
 		<div class="container-fluid">
 			<h1>pastillApp</h1>
 			<h2>Add manager</h2>
-			<form class="well">
+			<form class="well" method="POST" action="@routes.Managers.create(id)">
 				<label>Mail</label>
 				<input type="email" id="mail" name="mail" />
 				<br/>
