--- a/.target/views/managers/index.scala.html
+++ b/.target/views/managers/index.scala.html
@@ -1,15 +1,15 @@
 @(seq: Seq[User])(implicit session:play.api.mvc.Session)
 @main("Index manager") {
 	<h1>pastillApp</h1>
-	<h2>Contacts</h2>
+	<h2>Managers</h2>
 	<ul class="unstyled">
 		@for(manager <- seq) {
 			<li class="row-fluid">
-				<span class="btn span10">@manager.name</span><a class="btn btn-danger span1 offset1">X</a>
+				<span class="btn span10">@manager.name</span><!--  <a class="btn btn-danger span1 offset1">X</a>-->
 			</li>
 		}
 	</ul>
 	<div class="row-fluid">
-		<span class="btn span12 btn-success">Add manager</span>
+		<a class="btn span12 btn-success" href="@routes.Managers.create(session.get("id").get.toLong)">Add manager</a>
 	</div>
 }
