--- a/.target/views/users/update.scala.html
+++ b/.target/views/users/update.scala.html
@@ -34,6 +34,10 @@
 	     <input type="tel" name="telephone" id="telephone" placeholder="" value="@user.telephone"/>
 	   </div>
 	   <div class="">
+	   	 <!--  <a title="Managee" href="@routes.Managers.createForm(user.id.get)" class="myButton green a100">List managee</a>-->
+	   	 <a title="Managee" href="@routes.Managers.listByManager(user.id.get)" class="myButton green a100">List managees</a>
+	   </div>
+	   <div class="">
 	   	 <a title="Contact" href="@routes.Contacts.listByUser(user.id.get)" class="myButton green a100">List Contacts</a>
 	   </div>
 	   <div class="">
